// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Swatch stories snapshot > Default story renders and matches snapshot 1`] = `
<div>
  <button
    aria-checked="false"
    aria-label="Red"
    class="border-2 text-foreground flex-shrink-0 relative group transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 min-w-8 min-h-8 rounded-full w-7 h-7 p-1 cursor-pointer border-transparent"
    position="relative"
    role="radio"
    tabindex="-1"
    type="button"
  >
    <div
      class="flex items-center justify-center w-full h-full text-sm font-medium"
    >
      <div
        class="w-full h-full bg-red-500 rounded-full"
      />
      <span
        class="ml-1"
      >
        Red
      </span>
    </div>
  </button>
</div>
`;

exports[`Swatch stories snapshot > Disabled story renders and matches snapshot 1`] = `
<div>
  <button
    aria-checked="false"
    aria-label="Green"
    class="border-2 text-foreground flex-shrink-0 relative group transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 min-w-8 min-h-8 rounded-full w-7 h-7 p-1 cursor-not-allowed before:content-[""] before:absolute before:top-1/2 before:left-1/2 before:h-[32px] before:w-[1px] before:-translate-x-1/2 before:-translate-y-1/2 before:rotate-45 before:bg-black dark:before:bg-white before:z-[1] border-transparent"
    disabled=""
    position="relative"
    role="radio"
    tabindex="-1"
    type="button"
  >
    <div
      class="flex items-center justify-center w-full h-full text-sm font-medium"
    >
      <div
        class="w-full h-full bg-green-500 rounded-full"
      />
      <span
        class="ml-1"
      >
        Green
      </span>
    </div>
  </button>
</div>
`;

exports[`Swatch stories snapshot > HoverMode story renders and matches snapshot 1`] = `
<div>
  <button
    aria-checked="false"
    aria-label="Yellow"
    class="border-2 text-foreground flex-shrink-0 relative group transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 min-w-8 min-h-8 rounded-full w-7 h-7 p-1 cursor-pointer border-transparent"
    position="relative"
    role="radio"
    tabindex="-1"
    type="button"
  >
    <div
      class="flex items-center justify-center w-full h-full text-sm font-medium"
    >
      <div
        class="w-full h-full bg-yellow-500 rounded-full"
      />
      <span
        class="ml-1"
      >
        Yellow
      </span>
    </div>
  </button>
</div>
`;

exports[`Swatch stories snapshot > Selected story renders and matches snapshot 1`] = `
<div>
  <button
    aria-checked="true"
    aria-label="Blue"
    class="border-2 text-foreground flex-shrink-0 relative group transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 min-w-8 min-h-8 rounded-full w-7 h-7 p-1 cursor-pointer border-black"
    position="relative"
    role="radio"
    tabindex="-1"
    type="button"
  >
    <div
      class="flex items-center justify-center w-full h-full text-sm font-medium"
    >
      <div
        class="w-full h-full bg-blue-500 rounded-full"
      />
      <span
        class="ml-1"
      >
        Blue
      </span>
    </div>
  </button>
</div>
`;

exports[`Swatch stories snapshot > Square story renders and matches snapshot 1`] = `
<div>
  <button
    aria-checked="false"
    aria-label="Large"
    class="border-black/50 text-foreground flex-shrink-0 relative group transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 min-w-8 min-h-8 rounded-md px-3 py-1 cursor-pointer bg-gray-100 dark:bg-muted border-0 shadow-none"
    position="relative"
    role="radio"
    tabindex="-1"
    type="button"
  >
    <div
      class="flex items-center justify-center w-full h-full text-sm font-medium"
    >
      L
      <span
        class="ml-1"
      >
        Large
      </span>
    </div>
  </button>
</div>
`;

exports[`Swatch stories snapshot > WithHref story renders and matches snapshot 1`] = `
<div>
  <a
    aria-checked="false"
    aria-label="Product Variant"
    class="border-2 text-foreground flex-shrink-0 relative group transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 min-w-8 min-h-8 rounded-full w-7 h-7 p-1 cursor-pointer border-transparent"
    href="/products/1"
    position="relative"
    role="radio"
    tabindex="-1"
  >
    <div
      class="flex items-center justify-center w-full h-full text-sm font-medium"
    >
      <div
        class="w-full h-full bg-purple-500 rounded-full"
      />
      <span
        class="ml-1"
      >
        Product Variant
      </span>
    </div>
  </a>
</div>
`;
